# ctg-master

./: .mailmap  .travis.yml  Makefile.am  README.md  configure.ac
.travis/: bionic  build-and-test.bash  xenial
ctg/: Makefile.am  constraint.cc  constraint.hh  constraint_TEST.cc  decays.hh  observable.cc  observable.hh  references_TEST.in  signal-pdf.cc  signal-pdf.hh
ctg/b-decays/: Makefile.am  b-to-d-l-nu.cc  b-to-d-l-nu.hh  b-to-d-l-nu_TEST.cc  b-to-d-l-x-nu.cc  b-to-d-l-x-nu.hh  b-to-dstar-l-nu.cc  b-to-dstar-l-nu.hh  b-to-dstar-l-nu_TEST.cc  b-to-l-nu.cc  b-to-l-nu.hh  b-to-pi-l-nu.cc  b-to-pi-l-nu.hh  b-to-pi-l-nu_TEST.cc  b-to-pi-l-x-nu.cc  b-to-pi-l-x-nu.hh  b-to-pi-pi-l-nu.cc  b-to-pi-pi-l-nu.hh  b-to-pi-pi-l-nu_TEST.cc  b-to-v-l-nu.hh  bs-to-kstar-l-nu.cc  bs-to-kstar-l-nu.hh  bs-to-kstar-l-nu_TEST.cc  inclusive-b-to-u.cc  inclusive-b-to-u.hh  lambdab-to-lambdac2595-l-nu.cc  lambdab-to-lambdac2595-l-nu.hh  lambdab-to-lambdac2595-l-nu_TEST.cc  lambdab-to-lambdac2625-l-nu.cc  lambdab-to-lambdac2625-l-nu.hh  lambdab-to-lambdac2625-l-nu_TEST.cc  properties.cc  properties.hh  properties_TEST.cc
ctg/form-factors/: Makefile.am  analytic-b-to-kstar.cc  analytic-b-to-kstar.hh  analytic-b-to-kstar_TEST.cc  analytic-b-to-pi-pi.cc  analytic-b-to-pi-pi.hh  analytic-b-to-pi-pi_TEST.cc  analytic-b-to-pi.cc  analytic-b-to-pi.hh  analytic-b-to-pi_TEST.cc  b-lcdas.cc  b-lcdas.hh  b-lcdas_TEST.cc  baryonic-impl.hh  baryonic.cc  baryonic.hh  baryonic_TEST.cc  form-factor-adapter.hh  form-factors-fwd.hh  form-factors.cc  form-factors.hh  hqet-b-to-c.cc  hqet-b-to-c.hh  hqet-b-to-c_TEST.cc  kstar-lcdas.cc  kstar-lcdas.hh  kstar-lcdas_TEST.cc  mesonic-impl.hh  mesonic.cc  mesonic.hh  mesonic_TEST.cc  pi-lcdas.cc  pi-lcdas.hh  pi-lcdas_TEST.cc  zero-recoil-sum-rule.cc  zero-recoil-sum-rule.hh
ctg/optimize/: Makefile.am  optimizer-gsl.cc  optimizer-gsl.hh  optimizer-gsl_TEST.cc  optimizer.cc  optimizer.hh
ctg/parameters/: b-to-s-fcnc.yaml
ctg/rare-b-decays/: Makefile.am  bremsstrahlung.cc  bremsstrahlung.hh  bremsstrahlung_TEST.cc  charm-loops.cc  charm-loops.hh  charm-loops_TEST.cc  em-contributions.cc  em-contributions.hh  em-contributions_TEST.cc  exclusive-b-to-dilepton.cc  exclusive-b-to-dilepton.hh  exclusive-b-to-dilepton_TEST.cc  exclusive-b-to-s-dilepton-large-recoil.cc  exclusive-b-to-s-dilepton-large-recoil.hh  exclusive-b-to-s-dilepton-large-recoil_TEST.cc  exclusive-b-to-s-dilepton-low-recoil.cc  exclusive-b-to-s-dilepton-low-recoil.hh  exclusive-b-to-s-dilepton-low-recoil_TEST.cc  exclusive-b-to-s-dilepton.hh  exclusive-b-to-s-gamma.cc  exclusive-b-to-s-gamma.hh  exclusive-b-to-s-gamma_TEST.cc  hard-scattering.cc  hard-scattering.hh  hard-scattering_TEST.cc  inclusive-b-to-s-dilepton.cc  inclusive-b-to-s-dilepton.hh  inclusive-b-to-s-dilepton_TEST.cc  inclusive-b-to-s-gamma.cc  inclusive-b-to-s-gamma.hh  inclusive-b-to-s-gamma_TEST.cc  lambda-b-to-lambda-dilepton.cc  lambda-b-to-lambda-dilepton.hh  lambda-b-to-lambda-dilepton_TEST.cc  long-distance.cc  long-distance.hh  long-distance_TEST.cc  qcdf_integrals.cc  qcdf_integrals.hh  (+1 more)
ctg/statistics/: Makefile.am  chain-group.cc  chain-group.hh  chi-squared.cc  chi-squared.hh  chi-squared_TEST.cc  density-wrapper.cc  density-wrapper.hh  density-wrapper_TEST.cc  density-wrapper_TEST.hh  hierarchical-clustering.cc  hierarchical-clustering.hh  hierarchical-clustering_TEST.cc  histogram.cc  histogram.hh  histogram_TEST.cc  log-likelihood-fwd.hh  log-likelihood.cc  log-likelihood.hh  log-likelihood_TEST.cc  log-posterior-fwd.hh  log-posterior.cc  log-posterior.hh  log-posterior_TEST.cc  log-posterior_TEST.hh  log-prior-fwd.hh  log-prior.cc  log-prior.hh  log-prior_TEST.cc  markov-chain-sampler.cc  markov-chain-sampler.hh  markov-chain-sampler_TEST.cc  markov-chain.cc  markov-chain.hh  markov-chain_TEST.cc  population-monte-carlo-sampler.cc  population-monte-carlo-sampler.hh  population-monte-carlo-sampler_TEST.cc  prior-sampler.cc  prior-sampler.hh  (+16 more)
ctg/utils/: Makefile.am  accumulator.cc  accumulator.hh  apply.hh  apply_TEST.cc  cartesian-product.hh  cartesian-product_TEST.cc  ckm_scan_model.cc  ckm_scan_model.hh  ckm_scan_model_TEST.cc  complex.hh  concrete-signal-pdf.hh  concrete_observable.hh  condition_variable.cc  condition_variable.hh  density-fwd.hh  density-impl.hh  density.cc  density.hh  derivative.cc  derivative.hh  derivative_TEST.cc  destringify.cc  destringify.hh  diagnostics.cc  diagnostics.hh  equation_solver.cc  equation_solver.hh  equation_solver_TEST.cc  exception.cc  exception.hh  gsl-cblas-hack.cc  hdf5-fwd.hh  hdf5.cc  hdf5.hh  hdf5_TEST.cc  indirect-iterator-fwd.hh  indirect-iterator-impl.hh  indirect-iterator.hh  indirect-iterator_TEST.cc  (+105 more)
debian/: control-bionic.in  control-xenial.in
doc/: doxygen.conf
examples/: b-to-tau-nu-uncertainty.ipynb
manual/: Makefile.am  acknowledgments.tex  how-to-read.tex  macros.tex  manual.tex.in  references-physics.bib
manual/appendices/: Makefile.am  (+1 more)
numerics/: inclusive-b-to-s-gamma-nlo.nb
python/: Makefile.am  _ctg.cc  ctg_TEST.py
python/ctg/: __init__.py  ipython.py
python/ctg/data/: __init__.py
python/ctg/plot/: __init__.py  config.py  plotter.py
src/clients/: .gitignore  Makefile.am  cli_dumper.cc  cli_dumper.hh  cli_error.cc  cli_error.hh  cli_group.cc  cli_group.hh  cli_handler.cc  cli_handler.hh  cli_option.cc  cli_option.hh  cli_section.cc  cli_section.hh  cli_visitor.cc  cli_visitor.hh  ctg-evaluate.cc  ctg-find-mode.cc  ctg-list-constraints.cc  ctg-list-observables.cc  ctg-list-parameters.cc  ctg-list-signal-pdfs.cc  ctg-print-polynomial.cc  ctg-propagate-uncertainty.cc  ctg-sample-events-mcmc.cc  ctg-sample-mcmc.cc  ctg-sample-pmc.cc  ctg-scan-mc.cc  ctg-scan-polynomial.cc  ctg-scan.cc  integrated.cc  observables.cc
src/scripts/: .gitignore  Makefile.am  ctg-list-references.in  ctg-make-constraint  ctg-plot  ctg-plot-1d  ctg-plot-2d  ctg-prepare-home  ctg-print-uncertainty  eos-make-constraint  eos-merge-mcmc  eos-plot  eos-plot-1d  eos-plot-2d  eos-prepare-home  eos-print-uncertainty
test/: Makefile.am  test.cc  test.hh  test_TEST.cc
(+13 files in other folders)
